--- a/OrderSummaryComponent/css/styles.css
+++ b/OrderSummaryComponent/css/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #E0E8FF;
     background-image: url(../images/pattern-background-desktop.svg);
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     font-family: Red Hat Display;
 }
 
@@ -14,48 +14,53 @@ h5 {
     text-align: center;
     }
 
-p {
+.card-text {
     color: #717FA6;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 26px; /* 162.5% */
     text-align: center;
+    
+}
+
+#mainContainer {
+    width: 450px;
+    height: 697px;
+    flex-shrink: 0;
 }
 
 .card {
     border-radius: 20px;
-    width: 450px;
-    height: 697px;
+    box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.15);
 }
-
-
-
 
 .card-img-top {
     border-radius: 20px 20px 0px 0px;
+    width: 450px;
+    height: 220px;
 }
 
-.container {
+#musicIcon {
+    margin-top: 20px;
+}
+
+#miniCard {
     width: 354px;
-    height: 98px; 
+    height: 98px;
+    flex-shrink: 0;
     border-radius: 11px;
     background: #F7F9FF;
-}    
-
-/* #miniCard {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+}
 
 #miniCardTitle {
     color: #1F2E55;
     font-size: 16px;
     font-style: normal;
     font-weight: 900;
-    line-height: normal;
     text-align: left;
+    margin-bottom: 0px; 
+    margin-top: 20px;
 }
 
 #miniCardText {
@@ -63,11 +68,10 @@ p {
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: normal;
     text-align: left;
 }
 
-#miniCardChange {
+a {
     color: #382AE1;
     font-size: 14px;
     font-style: normal;
@@ -76,7 +80,16 @@ p {
     text-decoration-line: underline;
 }
 
-#paymentButton {
+a:hover {
+    color: #766CF1;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line:none;
+}
+
+button.btn-primary {
     border-radius: 11px;
     background: #382AE1;
     box-shadow: 0px 20px 20px 0px rgba(56, 42, 225, 0.19);
@@ -90,8 +103,25 @@ p {
     line-height: normal;
 }
 
-#cancelText {
+button.btn-primary:hover {
+    border-radius: 11px;
+    background: #766CF1;
+    box-shadow: 0px 20px 20px 0px rgba(56, 42, 225, 0.19);
+}
+
+#cancelText > a {
     color: #717FA6;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    margin-top: 32px; 
+    margin-bottom:48px;
+    text-decoration-line:none;
+}
+
+#cancelText > a:hover {
+    color: #1F2E55;
     font-size: 15px;
     font-style: normal;
     font-weight: 900;
