--- a/3ColumnPreviewCardComponent/css/styles.css
+++ b/3ColumnPreviewCardComponent/css/styles.css
@@ -2,12 +2,17 @@ body {
     color: #F2F2F2;
 }
 
+
 .card-group {
     width: 920px;
     height: 500px;
     flex-shrink: 0;
+    
 }
 
+.card {
+    border-radius: 0%;
+}
 
 .card-img-top {
     width: 64px;
@@ -43,16 +48,23 @@ body {
     opacity: 0.75;
 }
 
+
 #sedansCard {
     background: #E28625;
+    /* border-top-left-radius:8px;
+    border-bottom-left-radius:8px; */
+    
 }
 
 #sUVsCard {
     background: #006971;
+   
 }
 
 #luxuryCard {
     background: #004140;
+    /* border-top-right-radius:8px;
+    border-bottom-right-radius:8px; */
 }
 
 button {
@@ -72,4 +84,43 @@ button {
     font-weight: 400;
     line-height: 25px; 
     margin-bottom: 48px;
+}
+
+.btn-sedans {
+    color: #E28625;
+}
+
+button.btn-sedans:hover {
+    border: 2px solid #FFF;
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+}
+
+.btn-suv {
+    color: #006971;
+}
+
+button.btn-suv:hover {
+    border: 2px solid #FFF;
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+}
+
+.btn-luxury {
+    color: #004140;
+}
+
+button.btn-luxury:hover {
+    border: 2px solid #FFF;
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
 }
