update border radius and responsive settings

--- a/3ColumnPreviewCardComponent/css/styles.css
+++ b/3ColumnPreviewCardComponent/css/styles.css
@@ -123,3 +123,40 @@ button.btn-luxury:hover {
     font-weight: 400;
     line-height: 25px;
 }
+
+@media only screen and (min-device-width: 600px){
+
+    container {
+        position:relative;
+        
+    }
+
+    #mainCard {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #sedansCard {
+        border-top-left-radius:8px;
+        border-bottom-left-radius:8px;
+    }
+
+    #luxuryCard {
+        border-top-right-radius:8px;
+        border-bottom-right-radius:8px;
+    }
+}
+
+@media only screen and (max-device-width: 600px) {
+    #sedansCard {
+        border-top-left-radius:8px;
+        border-top-right-radius:8px;
+    }
+
+    #luxuryCard {
+        border-bottom-left-radius:8px;
+        border-bottom-right-radius:8px;
+    }
+}
