--- a/3ColumnPreviewCardComponent/css/styles.css
+++ b/3ColumnPreviewCardComponent/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display&family=Lexend+Deca&display=swap');
+
 body {
     color: #F2F2F2;
 }
