--- a/OrderSummaryComponent/css/styles.css
+++ b/OrderSummaryComponent/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+
 body {
     background-color: #E0E8FF;
     background-image: url(../images/pattern-background-desktop.svg);
