--- a/OrderSummaryComponent/css/styles.css
+++ b/OrderSummaryComponent/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;900&display=swap');
 
 body {
     background-color: #E0E8FF;
