--- a/QrCodeComponent/css/styles.css
+++ b/QrCodeComponent/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 body {
     font-family: Outfit;
     background: var(--light-grey, #D5E1EF);;
