--- a/ProductPreviewCardComponent/css/styles.css
+++ b/ProductPreviewCardComponent/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@400;500;700&family=Montserrat:wght@400;500;700&display=swap');
+
 body {
     font-family: 'Montserrat';
     background-color: #F2EAE2;
