--- a/intro-component-with-signup-form/css/styles.css
+++ b/intro-component-with-signup-form/css/styles.css
@@ -21,8 +21,9 @@ h1 {
     letter-spacing: -0.521px;
 }
 
+
 .btn-primary {
-    width: auto;
+    width:  auto;
     height: 60px;
     flex-shrink: 0;
     border-radius: 10px;
@@ -30,6 +31,7 @@ h1 {
     background: #5E54A4;
     box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.15);
     margin-bottom: 24px;
+    margin-top: 64px;
     text-align: center;
     font-family: Poppins;
     font-size: 15px;
@@ -47,8 +49,10 @@ form {
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.15);
-    padding:0,35px,0,35px;
+    padding:25px;
 }
+
+
 
 .btn-success {
     width: auto;
@@ -83,4 +87,16 @@ form {
     font-style: italic;
     font-weight: 500;
     line-height: normal;
+}
+
+
+@media only screen and (min-device-width: 600px){
+    .container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+
 }
