--- a/base-apparel-coming-soon-master/css/styles.css
+++ b/base-apparel-coming-soon-master/css/styles.css
@@ -1,14 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+
+
 body {
     background: url(../images/bg-pattern-desktop.svg); 
     background-color: linear-gradient(150deg, #FFF 0%, #FFF4F4 100%);
     background-repeat: no-repeat;
+    font-family: Josefin Sans;
+}
+
+#logo {
+    margin-top: 31px;
+    margin-bottom: 31px;
+}
+
+#head1 {
+    color: #CE9898;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 64px; /* 100% */
+    letter-spacing: 17.321px;
+    text-align: center;
+}
+
+h1 {
+    color: #423A3A;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 17.321px;  
+    text-align: center;
+}
+
+p {
+color: #CE9898;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 175% */
+text-align: center;
 }
 
 .errorMessage {
     color: #F96464;
-    
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+
+@media only screen and (min-device-width: 992px){
+
+    #logo {
+        margin-top: 75px;
+        margin-bottom: 136px;
+    }
+
 }
